--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BikeRepair By Bicyclopresto</string>
+    <string name="app_name">BikeMeeting By Bicyclopresto</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -21,9 +21,10 @@
     <string name="fragment_fix">Choisissez votre réparateur</string>
     <string name="fragment_fix_save">Votre choix:</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="fragment_share">Hello fragment share</string>
+    <string name="fragment_share">En cours de construction</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="fragment_join">Hello fragment join</string>
+    <string name="fragment_join">Pour bénéficier de cette application de demmande de réparation:
+    contact@bibcyclopresto.fr</string>
 
 
     <string name="title_activity_maps">Map</string>
@@ -35,5 +36,8 @@
     <string name="profil_name">prenom nom</string>
     <string name="profil_email">email</string>
     <string name="profil_number">numero de telephone</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
